--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://4e5c40bc-e6f5-42ca-b369-00a7a186feae.preview.emergentagent.com
 WDS_SOCKET_PORT=443
